--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Background_lightYellow"
+    android:background="#FFFACD"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -45,6 +45,7 @@
         android:id="@+id/gridView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="2sp"
         android:layout_below="@+id/gridView2"
         android:layout_alignParentLeft="true"
         android:numColumns="4" >
@@ -57,7 +58,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/spinner3"
-        android:numColumns="4" >
+        android:numColumns="4"
+        android:smoothScrollbar="true"
+        android:textSize="2sp" >
+
     </GridView>
 
 </RelativeLayout>
