--- a/res/layout/choice.xml
+++ b/res/layout/choice.xml
@@ -9,35 +9,29 @@
     android:background="#CDAA7D"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignLeft="@+id/imageButton1"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/willkommen" />
 
     <ImageButton
         android:id="@+id/imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageButton2"
-        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/imageButton3"
         android:src="@drawable/kategorie" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignTop="@+id/textView1"
-        android:src="@drawable/willkommen" />
 
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/imageView1"
         android:layout_below="@+id/imageView1"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="34dp"
+        android:layout_toRightOf="@+id/imageButton1"
         android:src="@drawable/suchenversuch" />
 
     <ImageButton
@@ -45,8 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_toRightOf="@+id/textView1"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/warenkorb" />
 
 </RelativeLayout>
