Beschreibung in DetailDialog eingefügt
Beschreibung aus DB Auslesen. In Detaildialog anzeigen und Layoutiong
des Dialogs

--- a/res/layout/articel_detail_view.xml
+++ b/res/layout/articel_detail_view.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/detail_view_headline"
         android:textColor="@color/Headline1Color"
@@ -17,93 +17,108 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_weight="0.51"
         android:padding="10dp" >
 
         <TableRow
             android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
-
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/detail_view_name" />
 
             <TextView
                 android:id="@+id/textViewArtikelname"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:text="TextView" />
 
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/detail_view_standort" />
 
             <TextView
                 android:id="@+id/textViewStandort"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:text="TextView" />
 
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/detail_view_preis" />
 
             <TextView
                 android:id="@+id/textViewPreis"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:text="TextView" />
 
         </TableRow>
 
-        <TableRow>
-	        <TextView
-	            android:id="@+id/textView8"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/detail_view_beschreibung" />
-	
-	        <TextView
-	            android:id="@+id/textViewBeschreibung"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="TextView" />
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_view_beschreibung" />
+
+            <TextView
+                android:id="@+id/textViewBeschreibung"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="none"
+                android:maxLines="10"
+                android:minLines="3"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="0dp"
+                android:paddingTop="20dp"
+                android:scrollHorizontally="false"
+                android:singleLine="false"
+                android:text="TextView" />
+
         </TableRow>
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/warenkorb" />
-
     </TableLayout>
 
 </LinearLayout>
