--- a/res/layout/activity_map_actitivity.xml
+++ b/res/layout/activity_map_actitivity.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rlmap"
     android:layout_width="match_parent"
@@ -9,4 +9,4 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MapActitivity" >
     <!--      android:background="@drawable/backgroundbaumarkt" -->
-</RelativeLayout>
+</LinearLayout>
